--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "koloo-app",
+  "name": "minimarket-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash.throttle": "^4.1.6",
+    "animate.css": "^3.7.2",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "localforage": "^1.7.3",
+    "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
     "yup": "^0.28.5"
   },
@@ -38,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -46,7 +56,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-scroll": "^1.5.4",
     "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
