--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/lodash.throttle": "^4.1.6",
     "animate.css": "^3.7.2",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
@@ -12,6 +11,7 @@
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
@@ -19,6 +19,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.1",
+    "react-truncate": "^2.4.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
@@ -53,12 +54,14 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/eslint": "^6.8.0",
     "@types/jest": "^24.0.0",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-scroll": "^1.5.4",
+    "@types/react-truncate": "^2.3.3",
     "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
