--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.2.0",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "google-maps-react": "^2.0.6",
     "localforage": "^1.7.3",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
@@ -52,6 +53,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/eslint": "^6.8.0",
+    "@types/google-maps-react": "^2.0.4",
     "@types/jest": "^24.0.0",
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.0.0",
