--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "google-maps-react": "^2.0.6",
     "localforage": "^1.7.3",
     "lodash.throttle": "^4.1.1",
+    "netlify-cli": "^2.50.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
