--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scroll": "^1.7.16",
     "react-spinners": "^0.8.1",
     "react-truncate": "^2.4.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
